# RESTfulAPI

./: .gitignore  Build.bat  CMakeLists.txt  LICENSE  README.md  Start.bat
Docs/: API.md
Requests/Breakfast/: CreateBreakfast.http  DeleteBreakfast.http  GetBreakfast.http  UpdateBreakfast.http
Source/: Client.cpp  Main.cpp
Source/Controllers/: BreakfastsController.cpp  BreakfastsController.h
Source/Core/: Core.h  Guid.cpp  Guid.h  Logger.cpp  Logger.h
Source/Middlewares/: LoggerMiddleware.cpp  LoggerMiddleware.h
Source/Models/: Breakfast.h
Source/Services/: BreakfastService.cpp  BreakfastService.h
